kubernetes_files/4-ui/2-uideployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-weatherapp-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: weatherapp-ui
  strategy:
   type: RollingUpdate
   rollingUpdate:
     maxSurge: 1
     maxUnavailable: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: weatherapp-ui
    spec:
      containers:
        - name: weatherapp-ui
          image: "amgadashraf/ui:latest"
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "500Mi"
            limits:
              cpu: "150m"
              memory: "550Mi"
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
